--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.2.2",
     "bcrypt": "^5.1.0",
     "cloudinary": "^1.32.0",
     "cors": "^2.8.5",
+    "crypto-js": "^4.1.1",
     "datauri": "^4.1.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.1",
@@ -24,7 +26,8 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.8.0",
-    "pg": "^8.8.0"
+    "pg": "^8.8.0",
+    "simple-crypto-js": "^3.0.1"
   },
   "devDependencies": {
     "eslint": "^8.24.0",
